<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DicoStoryV2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="story_image">Story Image</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="list_story">List Story</string>
    <string name="retry">Retry</string>
    <string name="get_data_failed">Failed to Get Data</string>
    <string name="story_added">New story successfully added</string>
    <string name="login_succeed">You have successfully logged in</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="invalid_password">Password must not be less than 8 characters</string>
    <string name="empty_edit_text">Input cannot be empty</string>
    <string name="account_created">Account with email %1$s successfully created</string>
    <string name="input_desc_first">Please enter a description first</string>
    <string name="input_image_first">Please enter the image file first</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="camera_permission_granted">Permission to use the camera is granted</string>
    <string name="camera_permission_rejected">Permission to use camera is rejected</string>
    <string name="fine_location_permission_granted">Permission to use precise location is granted</string>
    <string name="coarse_location_permission_granted">Permission to use approximate location is granted</string>
    <string name="location_permission_rejected">Permission to use location is rejected</string>
    <string name="loading">Loading</string>
    <string name="appwidget_text">DICOSTORYV2 BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="app_widget_description">DicoStory Widget</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="stories_maps">Stories Maps</string>
    <string name="map_style_parsing_failed">Map style parsing failed</string>
</resources>