<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.story.add.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/story_image"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/btnCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_photo_24"
            tools:alpha="100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            android:text="@string/camera"
            app:layout_constraintBottom_toTopOf="@+id/tvLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnGallery"
            tools:alpha="100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="@+id/btnCamera"
            app:layout_constraintEnd_toStartOf="@+id/btnCamera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnCamera"
            tools:alpha="100" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/location"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/letDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
            app:layout_constraintStart_toEndOf="@+id/tvLocation"
            app:layout_constraintTop_toTopOf="@+id/tvLocation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/letDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/btnUpload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.nasyithm.dicostoryv2.view.custom.LoadingButton
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:alpha="100" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>